--- a/public/index.css
+++ b/public/index.css
@@ -96,14 +96,14 @@
     color: #1e1e2d;
   }
   input {
-    background-color: #fafafa;
+    background-color: #ffffff;
     color: #1e1e2d;
     box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
     border-bottom: 0rem solid  #ea74ac;
   }
   input:focus, input:hover {
     border-bottom: 0.25rem solid  #ea74ac;
-    background-color: #e8e8e8;
+    background-color: #fafafa;
   }
   .album {
     background-color: #ffffff;
@@ -155,7 +155,7 @@
     background-color: #ea74ac;
   }
   .album-bottom {
-    background-color: #fafafa;
+    background-color: #ffffff;
     border-left: 0rem solid #ea74ac;
   }
   .album:hover .album-bottom {
@@ -166,7 +166,7 @@
     border-left: 0rem solid #ea74ac;
   }
   .track:hover {
-    background-color: #e8e8e8;
+    background-color: #fafafa;
     border-left: 0.25rem solid #ea74ac;
   }
   .slider {
