--- a/app/src/app.css
+++ b/app/src/app.css
@@ -23,6 +23,14 @@ body {
     color: rgb(151, 151, 255);
     filter: drop-shadow( 0px 0px 2px #8383F3);
   }
+  button {
+    background-color: #161627;
+    color: #fff;
+    border-color: #161627;
+  }
+  button:hover {
+    border-color: rgb(131, 131, 243);
+  }
 }
 @media (prefers-color-scheme: light) {
   body {
@@ -39,6 +47,14 @@ body {
   .link:hover {
     color: #f484b6;
     filter: drop-shadow( 0px 0px 2px #f484b6);
+  }
+  button {
+    background-color: #ffffff;
+    color: #1e1e2d;
+    border-color: #ffffff;
+  }
+  button:hover {
+    border-color: #ea74ac;
   }
 }
 
@@ -57,4 +73,14 @@ body {
 .link {
   cursor: pointer;
   transition: 0.1s color ease-out;
+}
+
+button {
+  cursor: pointer;
+  border-width: 2px;
+  border-radius: 8px;
+  border-style: solid;
+  font-size: large;
+  padding: 0.25em;
+  transition: 0.1s border-color ease-out;
 }
