--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -2,71 +2,58 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+  --bg-color: #0a0a0f;
+  --secondary-bg: #161627;
+
+  --color: #fff;
+  --secondary-color: #888;
+  --accent-color: rgb(131, 131, 243);
+}
+
 * {
   transition: 0.1s background-color ease-out;
 }
 
 body {
   font-family: 'Inter', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  background-color: var(--bg-color);
+  color: var(--color);
+  accent-color: var(--accent-color);
+}
 
-  .big {
-    font-weight: bold;
-  }
+button {
+  cursor: pointer;
+  padding: 0.25em;
 
-  /* .small {
-    font-size: medium;
-    font-weight: normal;
+  border-width: 2px;
+  border-radius: 8px;
+  border-style: solid;
+  font-size: large;
+
+  transition: 0.1s border-color ease-out;
+  background-color: var(--secondary-bg);
+  color: var(--color);
+  border-color: var(--secondary-bg);
+
+  svg {
+    margin: auto;
+    min-height: 65%;
+    width: auto;
   }
-  
-  button {
-    cursor: pointer;
-    border-width: 2px;
-    border-radius: 8px;
-    border-style: solid;
-    font-size: large;
-    padding: 0.25em;
-    transition: 0.1s border-color ease-out;
-  } */
+}
+
+button:hover {
+  border-color: rgb(131, 131, 243);
 }
 
 @media (prefers-color-scheme: light) {
-  body {
-    background-color: #f0f0f0;
-    color: #1e1e2d;
-    accent-color: #ea74ac;
-  }
+  :root {
+    --bg-color: #f0f0f0;
+    --secondary-bg: #fafafa;
 
-  /* .small {
-      color: #c8c8d2;
-    }
-   
-    button {
-      background-color: #ffffff;
-      color: #1e1e2d;
-      border-color: #ffffff;
-    }
-    button:hover {
-      border-color: #ea74ac;
-    }*/
-}
-
-@media (prefers-color-scheme: dark) {
-  body {
-    background-color: #0a0a0f;
-    color: #fff;
-    accent-color: rgb(131, 131, 243);
+    --color: #1e1e2d;
+    --secondary-color: #c8c8d2;
+    --accent-color: #ea74ac;
   }
-
-  /* .small {
-    color: #888;
-  }
-
-  button {
-    background-color: #161627;
-    color: #fff;
-    border-color: #161627;
-  }
-  button:hover {
-    border-color: rgb(131, 131, 243);
-  } */
 }
