--- a/src/styles/searchInput.module.css
+++ b/src/styles/searchInput.module.css
@@ -12,7 +12,7 @@
   flex: 1 1 0px;
   width: unset;
   min-width: 0;
-  background-color: #112;
+  background-color: var(--dark-bg);
   color: #fff;
   box-shadow: 0px 0px 15px #000;
   border-bottom: 0rem solid rgb(131, 131, 243);
